syntax = "proto3";
package bluzelle.curium.nft;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/bluzelle/curium/x/nft/types";

// Msg defines the Msg service.
service Msg {
    // this line is used by starport scaffolding # proto/tx/rpc
  rpc Chunk(MsgChunk) returns (MsgChunkResponse);
  rpc CreateNft(MsgCreateNft) returns (MsgCreateNftResponse);
  rpc UpdateNft(MsgUpdateNft) returns (MsgUpdateNftResponse);
  rpc DeleteNft(MsgDeleteNft) returns (MsgDeleteNftResponse);
}

// this line is used by starport scaffolding # proto/tx/message
message MsgChunk {
  string creator = 1;
  uint64 id = 2;
  uint64 chunk = 3;
  bytes data = 4;
}

message MsgChunkResponse {
}

message MsgCreateNft {
  string creator = 1;
  string meta = 3;
}

message MsgCreateNftResponse {
  uint64 id = 1;
}

message MsgUpdateNft {
  string creator = 1;
  uint64 id = 2;
  string meta = 4;
}

message MsgUpdateNftResponse { }

message MsgDeleteNft {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteNftResponse { }
